--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -2,17 +2,16 @@ name: Update README
 
 on:
   schedule:
-    - cron: "* * */7 * *"
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Update Profile README
 
     steps:
-      - uses: actions/checkout@v2.3.4
-      
-      - uses: Readme-Workflows/recent-activity@v2.4.1
+      - uses: actions/checkout@v3
+
+      - uses: Readme-Workflows/recent-activity@v2.6.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
